Value Objects field rename